tests/parse_print/random_perturb/enum_liberated/change-03/stderr.expected
Error:
    tests/parse_print/random_perturb/enum_liberated/change-03/change-03.essence:6:29:
  |
6 | letting E2 be new type enum ma, b, c, d, "hoh hoh hooo"}
  |                             ^
Missing ma

tests/parse_print/random_perturb/enum_liberated/change-03/change-03.essence:8:13:
  |
8 | find z : E2(a..c)
  |             ^
Error: Symbol not found "a"
